ios focus visible fix

--- a/src/app.css
+++ b/src/app.css
@@ -112,8 +112,13 @@ html > * {
   transition: background 0.325s linear;
 }
 
+
 *:focus-visible{
-  outline: 5px solid #0e64d4; 
+outline: 5px solid #0e64d4; 
+}
+
+*:focus:not(:focus-visible) {
+  outline: none;
 }
 
 .topBar {
